--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "angular2-webpack-starter",
-  "version": "5.0.5",
-  "description": "An Angular 2 Webpack Starter kit featuring Angular 2 (Router, Http, Forms, Services, Tests, E2E, Coverage), Karma, Protractor, Jasmine, Istanbul, TypeScript, and Webpack by AngularClass",
+  "name": "lyriq",
+  "version": "0.1.0",
+  "description": "An autocue implementation written in AngularJS.",
   "keywords": [
-    "angular2",
-    "webpack",
-    "typescript"
+    "angular",
+    "autocue"
   ],
-  "author": "Patrick Stapleton <patrick@angularclass.com>",
-  "homepage": "https://github.com/angularclass/angular2-webpack-starter",
+  "author": "Michaël Jacobs <michael.jacobs92@gmail.com>",
+  "homepage": "https://github.com/UrGuardian4ngel/lyriq",
   "license": "MIT",
   "scripts": {
     "build:dev": "webpack --config config/webpack.dev.js --progress --profile",
@@ -133,10 +132,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/angularclass/angular2-webpack-starter.git"
+    "url": "https://github.com/UrGuardian4ngel/lyriq.git"
   },
   "bugs": {
-    "url": "https://github.com/angularclass/angular2-webpack-starter/issues"
+    "url": "https://github.com/UrGuardian4ngel/lyriq/issues"
   },
   "engines": {
     "node": ">= 4.2.1",
