Add simple Electron config

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Michaël Jacobs <michael.jacobs92@gmail.com>",
   "homepage": "https://github.com/UrGuardian4ngel/lyriq",
   "license": "MIT",
+  "main": "main.js",
   "scripts": {
     "build:dev": "webpack --config config/webpack.dev.js --progress --profile",
     "build:docker": "npm run build:prod && docker build -t angular2-webpack-start:latest .",
@@ -23,6 +24,7 @@
     "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
     "e2e:live": "npm run e2e -- --elementExplorer",
     "e2e": "npm run protractor",
+    "electron": "electron .",
     "github-deploy:dev": "webpack --config config/webpack.github-deploy.js --progress --profile --github-dev",
     "github-deploy:prod": "webpack --config config/webpack.github-deploy.js --progress --profile --github-prod",
     "github-deploy": "npm run github-deploy:dev",
@@ -40,8 +42,8 @@
     "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
     "server:prod": "http-server dist --cors",
     "server": "npm run server:dev",
-    "start:hmr": "npm run server:dev:hmr",
-    "start": "npm run server:dev",
+    "start:hmr": "npm-run-all --parallel server:dev:hmr electron",
+    "start": "npm-run-all --parallel server:dev electron",
     "test": "karma start",
     "tslint": "tslint",
     "typedoc": "typedoc",
@@ -91,6 +93,7 @@
     "codelyzer": "~0.0.28",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
+    "electron": "^1.4.3",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
     "file-loader": "^0.9.0",
@@ -108,6 +111,7 @@
     "karma-remap-coverage": "^0.1.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.8.0",
+    "npm-run-all": "^3.1.0",
     "parse5": "^1.3.2",
     "phantomjs": "^2.1.7",
     "protractor": "^3.2.2",
